Fix alignment

--- a/src/App.css
+++ b/src/App.css
@@ -147,3 +147,6 @@ margin-left: 21rem;
 .hello{
   margin-top: 7%;
 }
+#left{
+  margin-left: 6rem;
+}
